unpackaged/main/default/objects/CICO_Intimation__c/CICO_Intimation__c.object-meta.xml
<CustomObject>
    <description>check in check out</description>
    <label>Intimation</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Intimation ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Intimations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>