unpackaged/main/default/objects/CICO_Intimation__c/fields/Inspected_By__c.field-meta.xml
<CustomField>
    <fullName>Inspected_By__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Inspected By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>