unpackaged/main/default/objects/CICO_Intimation__c/fields/Intimation_Date__c.field-meta.xml
<CustomField>
    <fullName>Intimation_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Intimation Date</label>
    <type>Date</type>
</CustomField>