unpackaged/main/default/objects/CICO_Intimation__c/fields/Intimation_No__c.field-meta.xml
<CustomField>
    <fullName>Intimation_No__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Intimation No</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>