unpackaged/main/default/objects/CICO_Intimation__c/fields/Intimation_Status__c.field-meta.xml
<CustomField>
    <fullName>Intimation_Status__c</fullName>
    <formula>IF( Total_Inspected_Vehicles__c ==  Total_Vehicle_Quantity__c , &#39;Completed&#39;, &#39;Pending&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intimation Status</label>
    <type>Text</type>
</CustomField>