unpackaged/main/default/objects/CICO_Intimation__c/fields/PO_Header_ID__c.field-meta.xml
<CustomField>
    <fullName>PO_Header_ID__c</fullName>
    <label>PO Header ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>