unpackaged/main/default/objects/CICO_Intimation__c/fields/Show_in_App__c.field-meta.xml
<CustomField>
    <fullName>Show_in_App__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show in App</label>
    <type>Checkbox</type>
</CustomField>