unpackaged/main/default/objects/CICO_Intimation__c/fields/Total_Vehicle_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Total_Vehicle_Quantity__c</fullName>
    <label>Total Vehicle Quantity</label>
    <summarizedField>CICO_Intimation_Line__c.Intimation_Quantity__c</summarizedField>
    <summaryForeignKey>CICO_Intimation_Line__c.Intimation_ID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>