unpackaged/main/default/objects/CICO_Intimation__c/fields/Vendor_ID__c.field-meta.xml
<CustomField>
    <fullName>Vendor_ID__c</fullName>
    <label>Vendor ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>